--- a/styles.css
+++ b/styles.css
@@ -22,23 +22,44 @@ body{
     margin-left: 10px;
 }
 
+.header-body{
+    margin: 0;
+}
+
 .header{
+    margin: 0px;
+    line-height: 60px;
+    padding: 30px 10%;
+    font-size: 2.5vw;
+    
+
+
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    color: brown;
-    margin: 30px;
+    
+
+    color: rgb(255, 255, 255);
     background-color: rgb(46, 46, 46);
+ 
+}
+
+a{
+    color: rgb(255, 255, 255);
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
+
 }
 
 .home-page{
     font-size: 2vw;
-    color: brown;
+    color: rgb(255, 255, 255);
+    margin: 40px;
 }
 
 button{
-    background-color: rgb(0, 0, 116);
-    color: white;
+    background-color: rgb(0, 121, 121);
+    color: rgb(255, 255, 255);
     border: none;
     width: 70px;
     height: 30px;
@@ -54,6 +75,20 @@ button{
 
 button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: rgb(0, 0, 100);
+    background-color: rgb(0, 121, 121);
     
+}
+
+ul{
+    list-style: none;
+    text-decoration: none;
+}
+
+.header ul :hover{
+    color: rgb(0, 121, 121);
+}
+.header-li{
+    display: inline-block;
+    font-size: 2vw;
+    margin-left: 50px;
 }
